k8s/dbapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbapp-deployment
  namespace: web
  labels:
    app: dbapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dbapp
  template:
    metadata:
      labels:
        app: dbapp
    spec:
      containers:
        - name: dbapp
          image: gcr.io/simple-476608/dbapp:latest
          ports:
            - containerPort: 5002
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: dbapp
  namespace: web
  labels:
    app: dbapp
spec:
  type: ClusterIP
  selector:
    app: dbapp
  ports:
    - name: http
      port: 80          # Exposed inside the cluster
      targetPort: 5002  # Container port
