k8s/mlflow.yaml
# ======= mlflow.yaml =======
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-deployment
  namespace: ml
  labels:
    app: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:

      serviceAccountName: ml-serviceaccount
      
      containers:
        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.0
          command:
            - "/cloud-sql-proxy"
            - "mlops-476802:us-central1:mlops-postgres"
          # No credentials needed since using workload identity

        - name: mlflow
          image: gcr.io/mlops-476802/mlflow-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: cloudsql
              mountPath: /cloudsql
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1"
      volumes:
        - name: cloudsql
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: ml
  labels:
    app: mlflow
spec:
  type: LoadBalancer
  selector:
    app: mlflow
  ports:
    - name: http
      port: 80
      targetPort: 5000
